# codebench-analytics

./: .gitignore  Makefile  README.md  cbTypes.py  code.py  components.py  executions.py  filters.py  main.py  metrics.py  pyproject.toml  utils.py
analytics/: classification.ipynb  correlations.ipynb  matriz_confusao_plot.ipynb  question_dataset.csv  regression.ipynb  results_classification_2n_macroavg.csv
codebench_analytics/: assessments_filter.py  code.py  code_metrics.py  components.py  executions.py  main.py  metrics.py  utils.py
codebench_analytics/analytics/: best_code_metrics.csv  best_results_1.csv  solutions_extractor.ipynb
codebench_analytics/collector/: actions.py  code_metrics_extractor.py  executions.py
codebench_analytics/extractor/: __init__.py  action_extractor.py  code_metrics_extractor.py  execution_extractor.py
codebench_analytics/model/: code_metrics.py  metrics.py  token_mapping.py
codebench_analytics/parser/: actions.py  executions.py
codebench_analytics/utils/: assessments_filter.py  components.py  dataset.py
collector/: actions.py  code_metrics_extractor.py  executions.py
notebooks/: code_metrics.csv  question_info.csv  results_classification_3n_macroavg2.csv  results_regression.csv
parser/: actions.py  executions.py
